[gd_scene load_steps=26 format=2]

[ext_resource path="res://textbox/textbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://overworld/tilemap/pawns/sign/sign.tscn" type="PackedScene" id=2]
[ext_resource path="res://autotile/terrain_simple.tscn" type="PackedScene" id=3]
[ext_resource path="res://overworld/tilemap/pawns/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://overworld/tilemap/trigger/scene_change_trigger.tscn" type="PackedScene" id=5]
[ext_resource path="res://asset/texture/grid.png" type="Texture" id=6]
[ext_resource path="res://overworld/tilemap/pawns/actor.gd" type="Script" id=7]
[ext_resource path="res://overworld/tilemap/trigger/trigger_grid.gd" type="Script" id=8]
[ext_resource path="res://overworld/tilemap/trigger/scene_change_trigger.gd" type="Script" id=9]
[ext_resource path="res://overworld/tilemap/grid/map.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/overworld/overworld_skel.gd" type="Script" id=11]
[ext_resource path="res://overworld/tilemap/grid/grid.gd" type="Script" id=12]
[ext_resource path="res://autotile/terrain_pokemon.tscn" type="PackedScene" id=13]
[ext_resource path="res://asset/texture/pokemon/pokemon_gsc_tileset_day.png" type="Texture" id=14]
[ext_resource path="res://overworld/tilemap/grid/map.gd" type="Script" id=15]
[ext_resource path="res://asset/texture/terrain_simple.png" type="Texture" id=16]
[ext_resource path="res://textbox/textbox.gd" type="Script" id=17]
[ext_resource path="res://overworld/tilemap/pawns/sign/sign.gd" type="Script" id=18]

[sub_resource type="TileSet" id=1]
0/name = "terrain_simple.png 0"
0/texture = ExtResource( 16 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 224 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "terrain_simple.png 1"
1/texture = ExtResource( 16 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 224, 64, 96 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "terrain_simple.png 2"
2/texture = ExtResource( 16 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 0, 64, 320 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="TileSet" id=6]
0/name = "pokemon_gsc_tileset_day.png 0"
0/texture = ExtResource( 14 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 240, 0, 256, 976 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "pokemon_gsc_tileset_day.png 1"
1/texture = ExtResource( 14 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 240, 1008 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "pokemon_gsc_tileset_day.png 2"
2/texture = ExtResource( 14 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 1008, 416, 352 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "pokemon_gsc_tileset_day.png 3"
3/texture = ExtResource( 14 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 496, 0, 224, 608 )
3/tile_mode = 2
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 16, 16 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "pokemon_gsc_tileset_day.png 4"
4/texture = ExtResource( 14 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 720, 0, 256, 608 )
4/tile_mode = 2
4/autotile/icon_coordinate = Vector2( 0, 0 )
4/autotile/tile_size = Vector2( 16, 16 )
4/autotile/spacing = 0
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=3]
0/name = "obstacle"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 7 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "actor"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 16, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "object"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 32, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="TileSet" id=4]
0/name = "grid.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 32, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=5]
0/name = "grid.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 32, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="overworld" type="Node2D"]
script = ExtResource( 11 )

[node name="textbox" type="CanvasLayer" parent="." groups=["textbox"] instance=ExtResource( 1 )]
pause_mode = 2
script = ExtResource( 17 )
CHAR_READ_RATE = 0.01
max_lines = 3

[node name="terrain_simple" type="TileMap" parent="." instance=ExtResource( 3 )]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 262147, 0, 655360, 262148, 0, 851969, 262149, 0, 851969, 262150, 0, 851969, 262151, 0, 851969, 262152, 0, 851969, 262153, 0, 851969, 262154, 0, 851969, 262155, 0, 851969, 262156, 0, 851969, 262157, 0, 851969, 262158, 0, 851969, 262159, 0, 655362, 327683, 0, 720899, 327684, 0, 458752, 327685, 0, 458752, 327686, 0, 458752, 327687, 0, 458752, 327688, 0, 458752, 327689, 0, 458752, 327690, 0, 458752, 327691, 0, 458752, 327692, 0, 458752, 327693, 0, 458752, 327694, 0, 327682, 327695, 0, 720899, 393219, 0, 720899, 393220, 0, 458752, 393221, 0, 458752, 393222, 0, 458752, 393223, 0, 458752, 393224, 0, 458752, 393225, 0, 458752, 393226, 0, 458752, 393227, 0, 458752, 393228, 0, 458752, 393229, 0, 458752, 393230, 0, 458752, 393231, 0, 720899, 458755, 0, 720899, 458756, 0, 458752, 458757, 0, 458752, 458758, 0, 458752, 458759, 0, 458752, 458760, 0, 458752, 458761, 0, 458752, 458762, 0, 458752, 458763, 0, 458752, 458764, 0, 458752, 458765, 0, 458752, 458766, 0, 458752, 458767, 0, 720899, 524291, 0, 720899, 524292, 0, 458752, 524293, 0, 458752, 524294, 0, 458752, 524295, 0, 458752, 524296, 0, 458752, 524297, 0, 458752, 524298, 0, 458752, 524299, 0, 458752, 524300, 0, 458752, 524301, 0, 458752, 524302, 0, 458752, 524303, 0, 720899, 589827, 0, 720899, 589828, 0, 458752, 589829, 0, 458752, 589830, 0, 458752, 589831, 0, 458752, 589832, 0, 458752, 589833, 0, 458752, 589834, 0, 458752, 589835, 0, 458752, 589836, 0, 458752, 589837, 0, 458752, 589838, 0, 458752, 589839, 0, 720899, 655363, 0, 720899, 655364, 0, 458752, 655365, 0, 458752, 655366, 0, 458752, 655367, 0, 458752, 655368, 0, 458752, 655369, 0, 458752, 655370, 0, 458752, 655371, 0, 458752, 655372, 0, 458752, 655373, 0, 458752, 655374, 0, 458752, 655375, 0, 720899, 720899, 0, 720899, 720900, 0, 458752, 720901, 0, 458752, 720902, 0, 458752, 720903, 0, 458752, 720904, 0, 458752, 720905, 0, 458752, 720906, 0, 458752, 720907, 0, 458752, 720908, 0, 458752, 720909, 0, 458752, 720910, 0, 458752, 720911, 0, 720899, 786435, 0, 786432, 786436, 0, 851969, 786437, 0, 851969, 786438, 0, 851969, 786439, 0, 851969, 786440, 0, 851969, 786441, 0, 851969, 786442, 0, 851969, 786443, 0, 851969, 786444, 0, 851969, 786445, 0, 851969, 786446, 0, 851969, 786447, 0, 786434 )

[node name="furniture" type="TileMap" parent="." instance=ExtResource( 3 )]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 262147, 0, 655360, 262148, 0, 851969, 262149, 0, 851969, 262150, 0, 851969, 262151, 0, 851969, 262152, 0, 851969, 262153, 0, 851969, 262154, 0, 851969, 262155, 0, 851969, 262156, 0, 851969, 262157, 0, 851969, 262158, 0, 851969, 262159, 0, 655362, 327683, 0, 720899, 327684, 0, 458752, 327685, 0, 458752, 327688, 2, 262144, 327689, 2, 262145, 327690, 2, 262146, 327691, 0, 458752, 327692, 0, 458752, 327693, 0, 458752, 327694, 0, 327682, 327695, 0, 720899, 393219, 0, 720899, 393220, 0, 458752, 393221, 0, 458752, 393222, 0, 458752, 393223, 0, 458752, 393224, 0, 458752, 393226, 0, 458752, 393227, 0, 458752, 393228, 0, 458752, 393229, 0, 458752, 393230, 0, 458752, 393231, 0, 720899, 458755, 0, 720899, 458757, 0, 458752, 458758, 0, 458752, 458759, 0, 458752, 458760, 0, 458752, 458761, 0, 458752, 458762, 0, 458752, 458763, 0, 458752, 458764, 0, 458752, 458765, 0, 458752, 458766, 0, 458752, 458767, 0, 720899, 524291, 0, 720899, 524293, 0, 458752, 524294, 0, 458752, 524295, 0, 458752, 524296, 0, 458752, 524297, 0, 458752, 524298, 0, 458752, 524299, 0, 458752, 524300, 0, 458752, 524301, 0, 458752, 524302, 0, 458752, 524303, 0, 720899, 589827, 0, 720899, 589828, 0, 458752, 589829, 0, 458752, 589830, 0, 458752, 589831, 0, 458752, 589832, 0, 458752, 589833, 0, 458752, 589834, 0, 458752, 589835, 0, 458752, 589836, 0, 458752, 589837, 0, 458752, 589838, 0, 458752, 589839, 0, 720899, 655363, 0, 720899, 655364, 0, 458752, 655365, 0, 458752, 655366, 0, 458752, 655367, 0, 458752, 655368, 0, 458752, 655369, 0, 458752, 655370, 0, 458752, 655371, 0, 458752, 655372, 0, 458752, 655373, 0, 458752, 655374, 0, 458752, 655375, 0, 720899, 720899, 0, 720899, 720900, 0, 458752, 720901, 0, 458752, 720902, 0, 458752, 720903, 0, 458752, 720904, 0, 458752, 720905, 0, 458752, 720906, 0, 458752, 720907, 0, 458752, 720908, 0, 458752, 720909, 0, 458752, 720910, 0, 458752, 720911, 0, 720899, 786435, 0, 786432, 786436, 0, 851969, 786437, 0, 851969, 786438, 0, 851969, 786439, 0, 851969, 786440, 0, 851969, 786441, 0, 851969, 786442, 0, 851969, 786443, 0, 851969, 786444, 0, 851969, 786445, 0, 851969, 786446, 0, 851969, 786447, 0, 786434 )

[node name="things" type="TileMap" parent="." instance=ExtResource( 3 )]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 262147, 0, 655360, 262148, 0, 851969, 262149, 0, 851969, 262150, 0, 851969, 262151, 0, 851969, 262152, 0, 851969, 262153, 0, 851969, 262154, 0, 851969, 262155, 0, 851969, 262156, 0, 851969, 262157, 0, 851969, 262158, 0, 851969, 262159, 0, 655362, 327683, 0, 720899, 327684, 0, 458752, 327685, 0, 458752, 327688, 1, 262144, 327689, 1, 262145, 327690, 1, 262146, 327691, 0, 458752, 327692, 0, 458752, 327693, 0, 458752, 327694, 0, 327682, 327695, 0, 720899, 393219, 0, 720899, 393220, 0, 458752, 393221, 0, 458752, 393222, 0, 458752, 393223, 0, 458752, 393224, 0, 458752, 393225, 1, 131073, 393226, 0, 458752, 393227, 0, 458752, 393228, 0, 458752, 393229, 0, 458752, 393230, 0, 458752, 393231, 0, 720899, 458755, 0, 720899, 458756, 1, 131072, 458757, 0, 458752, 458758, 0, 458752, 458759, 0, 458752, 458760, 0, 458752, 458761, 0, 458752, 458762, 0, 458752, 458763, 0, 458752, 458764, 0, 458752, 458765, 0, 458752, 458766, 0, 458752, 458767, 0, 720899, 524291, 0, 720899, 524292, 1, 196608, 524293, 0, 458752, 524294, 0, 458752, 524295, 0, 458752, 524296, 0, 458752, 524297, 0, 458752, 524298, 0, 458752, 524299, 0, 458752, 524300, 0, 458752, 524301, 0, 458752, 524302, 0, 458752, 524303, 0, 720899, 589827, 0, 720899, 589828, 0, 458752, 589829, 0, 458752, 589830, 0, 458752, 589831, 0, 458752, 589832, 0, 458752, 589833, 0, 458752, 589834, 0, 458752, 589835, 0, 458752, 589836, 0, 458752, 589837, 0, 458752, 589838, 0, 458752, 589839, 0, 720899, 655363, 0, 720899, 655364, 0, 458752, 655365, 0, 458752, 655366, 0, 458752, 655367, 0, 458752, 655368, 0, 458752, 655369, 0, 458752, 655370, 0, 458752, 655371, 0, 458752, 655372, 0, 458752, 655373, 0, 458752, 655374, 0, 458752, 655375, 0, 720899, 720899, 0, 720899, 720900, 0, 458752, 720901, 0, 458752, 720902, 0, 458752, 720903, 0, 458752, 720904, 0, 458752, 720905, 0, 458752, 720906, 0, 458752, 720907, 0, 458752, 720908, 0, 458752, 720909, 0, 458752, 720910, 0, 458752, 720911, 0, 720899, 786435, 0, 786432, 786436, 0, 851969, 786437, 0, 851969, 786438, 0, 851969, 786439, 0, 851969, 786440, 0, 851969, 786441, 0, 851969, 786442, 0, 851969, 786443, 0, 851969, 786444, 0, 851969, 786445, 0, 851969, 786446, 0, 851969, 786447, 0, 786434 )

[node name="tilemap" type="TileMap" parent="." instance=ExtResource( 13 )]
tile_set = SubResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="map" parent="." instance=ExtResource( 10 )]
self_modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 15 )
hide_tiles = true

[node name="grid" parent="map" index="0"]
self_modulate = Color( 1, 1, 1, 0 )
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 327683, 0, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327695, 0, 0, 393219, 0, 0, 393231, 0, 0, 458755, 0, 0, 458756, 1, 0, 458767, 0, 0, 524291, 0, 0, 524292, 1, 0, 524303, 0, 0, 589827, 0, 0, 589836, 1, 0, 589839, 0, 0, 655363, 0, 0, 655375, 0, 0, 720899, 0, 0, 720911, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0 )
script = ExtResource( 12 )

[node name="player" type="Node2D" parent="map/grid" index="0" groups=["player"] instance=ExtResource( 4 )]
position = Vector2( 200, 152 )
script = ExtResource( 7 )
type = 1
speed = 1.0

[node name="sign" type="Node2D" parent="map/grid" index="1" instance=ExtResource( 2 )]
position = Vector2( 152, 88 )
script = ExtResource( 18 )
type = 1
interact_text = PoolStringArray( "mi compu! aca tengo el gta", "el mario", "super wario land", "tngo el assasins creed", "pokemon gold", "el minecraft", "tengo el counter", "super crazy guitar maniac deluxe 2", "pero ahora no tengo tiempo de jueguitos" )

[node name="sign2" type="Node2D" parent="map/grid" index="2" instance=ExtResource( 2 )]
position = Vector2( 168, 88 )
script = ExtResource( 18 )
type = 1
interact_text = PoolStringArray( "ahora no" )

[node name="sign4" type="Node2D" parent="map/grid" index="3" instance=ExtResource( 2 )]
position = Vector2( 72, 120 )
script = ExtResource( 18 )
type = 1
interact_text = PoolStringArray( "mi camita linda" )

[node name="sign5" type="Node2D" parent="map/grid" index="4" instance=ExtResource( 2 )]
position = Vector2( 72, 136 )
script = ExtResource( 18 )
type = 1
interact_text = PoolStringArray( "mmm linda linda mi camita" )

[node name="sign3" type="Node2D" parent="map/grid" index="5" instance=ExtResource( 2 )]
position = Vector2( 136, 88 )
script = ExtResource( 18 )
type = 1
interact_text = PoolStringArray( "bue todo vas a chequear hermano es un monitor" )

[node name="triggers" parent="map" index="1"]
self_modulate = Color( 0, 1, 0, 0 )
tile_set = SubResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 327694, 0, 0 )
script = ExtResource( 8 )

[node name="scene_change" parent="map/triggers" index="0" instance=ExtResource( 5 )]
position = Vector2( 232, 88 )
script = ExtResource( 9 )
type = 0
to = 1
relative_spawn_pos = true
is_world_coords = true
wait_step = true

[node name="triggers" type="TileMap" parent="map"]
self_modulate = Color( 0, 1, 0, 1 )
tile_set = SubResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
script = ExtResource( 8 )

[node name="triggers" type="TileMap" parent="map"]
self_modulate = Color( 0, 1, 0, 1 )
tile_set = SubResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
script = ExtResource( 8 )

[connection signal="text_display_finished" from="textbox" to="." method="_on_textbox_text_display_finished"]
[connection signal="text_display_started" from="textbox" to="." method="_on_textbox_text_display_started"]
[connection signal="finish_step" from="map/grid/player" to="map/grid/player/step_counter" method="_on_player_finish_step"]

[editable path="map"]
[editable path="map/triggers/scene_change"]
