[gd_scene load_steps=6 format=2]

[ext_resource path="res://textbox/textbox.gd" type="Script" id=1]
[ext_resource path="res://asset/font/ProggyClean.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="textbox" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="textbox_container" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Panel" parent="textbox_container"]
margin_right = 320.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 1 )

[node name="margin_container" type="MarginContainer" parent="textbox_container"]
margin_right = 320.0
margin_bottom = 64.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="hbox_container" type="HBoxContainer" parent="textbox_container/margin_container"]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 56.0

[node name="start" type="Label" parent="textbox_container/margin_container/hbox_container"]
margin_right = 7.0
margin_bottom = 14.0
rect_min_size = Vector2( 7, 0 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )

[node name="label" type="Label" parent="textbox_container/margin_container/hbox_container"]
margin_left = 11.0
margin_right = 293.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
autowrap = true
clip_text = true

[node name="end" type="Label" parent="textbox_container/margin_container/hbox_container"]
margin_left = 297.0
margin_top = 34.0
margin_right = 304.0
margin_bottom = 48.0
rect_min_size = Vector2( 7, 0 )
size_flags_vertical = 8
custom_fonts/font = SubResource( 2 )
text = "v"

[node name="tween" type="Tween" parent="."]

[connection signal="tween_completed" from="tween" to="." method="_on_Tween_tween_completed"]
